syntax="proto3";
package protoc;

message C2S_EnterMap // IRequest
{
	int32 RpcId = 90;
}

message S2C_EnterMap // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	// 自己的unit id
	int64 UnitId = 1;
	// 所有的unit
	repeated UnitInfo Units = 2;
	bytes Voice = 3;
}

message UnitInfo
{
	int64 UnitId  = 1;
    float X = 2;
	float Y = 3;
	float Z = 4;
}

message Vec3Data
{
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message CMoveData
{
    string UserId = 1;
	Vec3Data Pos = 2;
	Vec3Data Rotate = 3;
	float MoveSpeed = 4;
	float SyncDeltaTime = 5;
	int32 ActionType = 6;
}